<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stuffbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">Kategorie</string>
    <string name="title_activity_feature">Eigenschaft anlegen</string>
    <string name="title_activity_feature_delete">mehrere Eigenschaften löschen</string>
    <string name="title_activity_feature_change">Eigenschaft ändern</string>
    <string name="title_activity_new_formular">Formular anlegen</string>
    <string name="title_activity_formulars_change">Formular ändern</string>
    <string name="title_activity_new_category">Kategorie anlegen</string>
    <string name="title_activity_new_item">Gegenstand anlegen</string>
    <string name="actionbartitle_edit_item">Gegenstand ändern</string>
    <string name="actionbartitle_edit_category">Kategorie ändern</string>
    <string name="title_activity_detail_item">neuer Eintrag</string>
    <string name="title_activity_choose_formular">Formular auswählen</string>
    <string name="title_activity_choose_category">Kategorie auswählen</string>
    <string name="title_activity_add_debugentries">Debugeinträge anlegen</string>
    <string name="abort">abbrechen</string>
    <string name="save">fertig</string>
    <string name="delete">löschen</string>
    <string name="action_search">Suche</string>
    <string name="search_hint">Einträge suchen</string>
    <string name="name">Name</string>
    <string name="name_formular">Formularname</string>
    <string name="name_category">Kategoriename</string>
    <string name="name_feature">Eigenschaftsname</string>
    <string name="feature">Art</string>
    <string name="edit_name">Namen eingeben</string>
    <string name="icon">Icon</string>
    <string name="prefix_icon_category">category_icon_</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="init_sortnumber">-1</string>
    <string name="empty_string"></string>
    <string name="msg_alert_de_missingvalue_1">Das Feld\u0020</string>
    <string name="msg_alert_de_missingvalue_2">\u0020darf nicht leer sein.</string>
    <string name="msg_alert_de_exists">Dieser Eintrag existiert bereits.</string>
    <string name="msg_alert_de_delete_category">Kategorie wirklich löschen?</string>
    <string name="msg_alert_de_choose_category">Bitte mindestens eine Kategorie auswählen.</string>
    <string name="dialog_notice_item_name_missing">Bitte einen Namen für das Item vergeben.</string>
    <string name="delete_dialog_category">Soll die Kategorie samt aller Unterkategorien und Dateien gelöschen werden?</string>
    <string name="delete_dialog_feature">Soll die Eigenschaft gelöschen werden?</string>
    <string name="delete_dialog_formular">Soll das Formular samt aller zugeordneten Gegenständen gelöschen werden?</string>
    <string name="delete_dialog_item">Soll der Gegenstand gelöschen werden?</string>
    <string name="txt_badge_headline">Errungene Abzeichen</string>
    <string name="txt_badge_new_badge">Neues Abzeichen erhalten</string>
    <string name="btn_alert_de_ok">OK</string>
    <string name="btn_alert_de_yes">Ja</string>
    <string name="btn_alert_de_no">Nein</string>
    <string name="error">Fehler</string>
    <string name="delete_dialog_yes">Ja</string>
    <string name="delete_dialog_no">Nein</string>
    <string name="new_item_select_formular_step1">Schritt 1:</string>
    <string name="to_new_formular">Formular anlegen</string>
    <string name="labelFeatureImage">Bild</string>
    <string name="category">Kategorie</string>
    <string name="text_piece_amount">Anzahl Einträge:\u0020</string>
    <string name="text_head_lvl">Level </string>
    <string name="detail_icon_edit_name_hint">Name wird benötigt</string>

    <string name="button_list_categories">List Categories</string>
    <string name="button_new_kategorie">Neue Kategorie Screen</string>
    <string name="button_kategorie">Kategorie Screen</string>
    <string name="button_arten">Arten-Screen</string>
    <string name="button_formular">Formular Screen</string>
    <string name="button_detail">Detail Screen</string>
    <string name="button_abzeichen">Abzeichen Screen</string>
    <string name="title_activity_formular">FormularActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_list_categories">ListCategoriesActivity</string>
    <string name="title_activity_choose_items">ChooseItemsActivity</string>
    <string name="title_activity_badge_detail">BadgeDetailActivity</string>

</resources>
