<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stuffbox.ListCategoriesActivity" >
    
    <item android:id="@+id/menu_badge"
          android:icon="@drawable/ic_action_medaile" 
          android:title="@string/txt_badge_headline"
          app:showAsAction="ifRoom"/> 
              
    <item android:id="@+id/menu_new_categorie"
          android:icon="@drawable/ic_action_new_folder" 
          android:title="@string/title_activity_new_category"
          app:showAsAction="ifRoom"/> 
    
    <item android:id="@+id/menu_new_item"
          android:icon="@drawable/ic_action_new_file" 
          android:title="@string/title_activity_new_item"
          app:showAsAction="ifRoom"/>     
          
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item
        android:id="@+id/action_change_features"
        android:orderInCategory="100"
        android:title="@string/title_activity_feature_change"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_change_formulars"
        android:orderInCategory="100"
        android:title="@string/title_activity_formulars_change"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_add_debug_entries"
        android:orderInCategory="100"
        android:title="@string/title_activity_add_debugentries"
        app:showAsAction="never"/>
</menu>
