<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stuffbox.ListCategoriesActivity" >

    <item android:id="@+id/menu_delete_category"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/delete"
          app:showAsAction="always"/>     
    
    <item android:id="@+id/menu_chancel_category"
          android:icon="@drawable/ic_action_cancel"
          android:title="@string/abort"
          app:showAsAction="always"/> 
              
    <item android:id="@+id/menu_update_category"
          android:icon="@drawable/ic_action_accept" 
          android:title="@string/save"
          app:showAsAction="always"/>  
          
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
    
</menu>
