<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stuffbox.NewCategoryActivity" >
    
    <item android:id="@+id/menu_chancel_item"
          android:icon="@drawable/ic_action_cancel" 
          android:title="@string/abort" 
          app:showAsAction="always"/> 
              
    <item android:id="@+id/menu_save_new_item"
          android:icon="@drawable/ic_action_edit" 
          android:title="@string/save"
          app:showAsAction="always"/>  
          
    <item
        android:id="@+id/action_delete_features"
        android:orderInCategory="100"
        android:title="@string/title_activity_feature_delete"
        app:showAsAction="never"/>
    
</menu>
