<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:padding="8dp">

	<LinearLayout
    	android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
        
	<TextView
        android:id="@+id/presymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textAppearance="?android:attr/textAppearanceLarge" />         
	    
	    <TextView
	        android:id="@+id/selected_feature_name"
	        android:layout_width="match_parent"
	        android:layout_height="26dip"
	        android:layout_marginLeft="10dip"
	        android:ellipsize="marquee"
	        android:singleLine="true"
	        android:text="@string/name"
	        android:textSize="16sp" />
    </LinearLayout> 
     
    <TextView
        android:id="@+id/selected_feature_sortnumber"
        android:layout_width="wrap_content"
        android:layout_height="26dip"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_marginLeft="10dip"
        android:text="@string/init_sortnumber"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />   
</RelativeLayout > 