<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical" >

        <TextView
            style="@style/identifier"
            android:singleLine="true"
            android:text="@string/labelFeatureName" />

        <EditText
            android:id="@+id/editNameFeature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="" >
        </EditText>

        <TextView
            style="@style/identifier"
            android:singleLine="true"
            android:text="@string/labelFeatureImage" />

        <ImageButton
            android:id="@+id/imageButtonItem"
            style="@style/aLinearRowCreatingSomethingImageButton"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:background="@null"
            android:contentDescription="@string/title_activity_new_category"
            android:fitsSystemWindows="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/item_photo" />

        <TextView
            style="@style/identifier"
            android:singleLine="true"
            android:text="@string/category" />


        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:onClick="openCategoryChooser"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageButton
                android:id="@+id/detail_item_category_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@null"
                android:contentDescription="@string/title_activity_new_category"
                android:fitsSystemWindows="true"
                android:padding="2dp"
                android:scaleType="fitCenter"/>

  
            <TextView
                android:id="@+id/detail_item_category_text"
                style="@style/aLinearRowCreatingSomethingText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>

        <ListView
            android:id="@+id/featureListViewInDetailItem"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:drawSelectorOnTop="true"
            android:padding="10dp"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

</ScrollView>